--- a/Clase1/index.html
+++ b/Clase1/index.html
@@ -1,12 +1,19 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="scripts.js"> </script>
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>Aguante el prettier y el live</h1>
+
+
+
 </body>
+
 </html>
